--- a/success.html
+++ b/success.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Success</title>
+
+  <link rel="icon" href="favicon.ico" >
+
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
@@ -10,7 +13,7 @@
 
     <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Awesome!</h1>
+    <h1 class="display-4">successfully subscribed!</h1>
     <p class="lead">you've been successfully signed up to the NewsLetter, look forwords to lots of awesome content!.</p>
     <form  action="/success" method="post">
       <button class="bt btn-lg btn-success" type="submit" name="button">Add More?</button>
