added phone number bar

--- a/signup.html
+++ b/signup.html
@@ -55,6 +55,7 @@
   <input type="text"  name="fName" class="form-control top" placeholder="First Name" required autofocus>
   <input type="text"  name="lName" class="form-control middle" placeholder="Last Name" required>
   <input type="email" name="email" class="form-control bottom" placeholder="Email" required>
+  <input type="phone" name="phone" class="form-control bottom" placeholder="Phone Number" required>
 
   <button class="btn btn-lg btn-primary btn-block" type="submit">SignMe Up!</button>
   <p class="mt-5 mb-3 text-muted">&copy; A.H-NewsLetter</p>
